# tracelon

./: .gitignore  CLAUDE.md  PKGBUILD  README.md  install-arch.sh  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  ci.yml
app/assets/css/: main.css
app/components/: AppToolbar.vue  OptimizedPreview.vue  SourceCanvas.vue  SvgPreview.vue
app/composables/: useSvgo.ts  useTracer.ts  useZoomPan.ts
app/pages/: index.vue
app/utils/: format.ts
docs/superpowers/plans/: 2026-03-18-curve-optimization-pipeline.md  2026-03-18-tracelon-implementation.md
docs/superpowers/specs/: 2026-03-18-tracelon-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: export.rs  load.rs  mod.rs  simplify.rs  trace.rs
src-tauri/src/pipeline/: corner_detection.rs  corner_split.rs  douglas_peucker.rs  line_snap.rs  mod.rs  schneider.rs  segment_count.rs  simplify.rs
